--- a/main.html
+++ b/main.html
@@ -67,53 +67,52 @@
 <body>
 <div class="mainContainer">
 
-<h1>GAME: Paper rock and scissors!</h1>
-<h3>Choose one:</h3>
+    <h1>GAME: Paper rock and scissors!</h1>
+    <h3>Choose one:</h3>
 
-<div class="container">
+    <div class="container">
 
 
-    <div class="boxes">
+        <div class="boxes">
 
-        <div class="background">
-            <img data-option="paper" src="paper.png" height="75%" width="75%">
+            <div class="background">
+                <img data-option="paper" src="paper.png" height="75%" width="75%">
+            </div>
+
+            <div class="background">
+                <img data-option="rock" src="rock.png" height="75%" width="75%">
+            </div>
+
+            <div class="background">
+                <img data-option="scissors" src="scissors.png" height="75%" width="75%">
+            </div>
+
         </div>
 
-        <div class="background">
-            <img data-option="rock" src="rock.png" height="75%" width="75%">
-        </div>
-
-        <div class="background">
-            <img data-option="scissors" src="scissors.png" height="75%" width="75%">
-        </div>
-
+        <button id="paper" class="paper btn1" onclick="myFunction(paper)">paper</button>
+        <button id="rock" class="rock btn2" onclick="myFunction(rock)">rock</button>
+        <button id="scissors" class="scissors btn3" onclick="myFunction(scissors)">scissors</button>
     </div>
 
-    <button id="paper" class="paper btn1" onclick="myFunction(paper)">paper</button>
-    <button id="rock" class="rock btn2" onclick="myFunction(rock)">rock</button>
-    <button id="scissors" class="scissors btn3" onclick="myFunction(scissors)">scissors</button>
-</div>
+
+    <div class="players">
+        <div class="player1">PLAYER</div>
+        <div id="remis" class="remis"></div>
+        <div class="computer">COMPUTER</div>
+    </div>
+
+    <div class="symbols">
+        <div id="player1-symbol" class="player1">symbol</div>
+        <div id="computer-symbol" class="computer">symbol</div>
+    </div>
+
+    <div class="scores">
+        <div id="scorePlayer" class="scoreYou"></div>
+        <div id="scoreComputer" class="scoreComputer"></div>
+    </div>
 
 
-<div class="players">
-    <div class="player1">PLAYER</div>
-    <div id="remis" class="remis"></div>
-    <div class="computer">COMPUTER</div>
-</div>
-
-<div class="symbols">
-    <div id="player1-symbol" class="player1">symbol</div>
-    <div id="computer-symbol" class="computer">symbol</div>
-</div>
-
-<div class="scores">
-    <div id="scorePlayer" class="scoreYou"></div>
-    <div id="scoreComputer" class="scoreComputer"></div>
-</div>
-
-
-
-    <button id="myBtn"  onclick="restart()">TRY AGAIN!</button>
+    <button id="myBtn" onclick="restart()">TRY AGAIN!</button>
 
 </div>
 <script>
@@ -127,13 +126,12 @@
 
 
     function myFunction(symbol) {
+        document.getElementById('remis').innerHTML = "";
         const SYMBOLS = ['rock', 'paper', 'scissors'];
-        //Math random losuje zawsze od 0 do 0.999999
 
-        //losowanie komputera
-        let wylosowanyUlamek = Math.random() * SYMBOLS.length;
-        let zaokraglonyNumer = Math.floor(wylosowanyUlamek);
-        symbolForComp = SYMBOLS[zaokraglonyNumer];
+        let fraction = Math.random() * SYMBOLS.length;
+        let roundedNumber = Math.floor(fraction);
+        symbolForComp = SYMBOLS[roundedNumber];
         symbolForPlayer = symbol.innerHTML;
         console.log("COMPUTER", "=", symbolForComp);
         console.log("PLAYER", "=", symbolForPlayer)
@@ -149,7 +147,7 @@
             document.getElementById("scorePlayer").innerHTML = countForPlayer;
             document.getElementById('scoreComputer').innerHTML = countForPlayer;
             document.getElementById('remis').innerHTML = "=";
-            alert("remis")
+
 
         }
 
@@ -167,10 +165,11 @@
         document.getElementById('computer-symbol').innerHTML = symbolForComp;
 
 
-
-
     }
+
     function restart() {
+        document.getElementById('remis').innerHTML = "";
+
         countForComputer = 0;
         countForPlayer = 0;
 
@@ -181,6 +180,7 @@
         document.getElementById('scoreComputer').innerHTML = symbolForComp;
 
     }
+
     function compareSymbols(symbol, symbolForComp) {
         if (symbol === 'rock') {
             if (symbolForComp === 'scissors') {
@@ -224,7 +224,6 @@
             }
         }
     }
-
 
 
 </script>
